opam-version: "2.0"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "Implementation of the reduced form of BabyJubjub using library ec"
description: "Implementation of the reduced form of BabyJubjub using library ec"
homepage: "https://gitlab.com/dannywillems/ocaml-ec"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-ec.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-ec/issues"
license: "MIT"
depends: [
  "dune" {>= "2.7"}
  "zarith" {>= "1.9.1" & < "2.0.0"}
  "ff"
  "ec" {= version}
  "alcotest" {with-test}
  "ec-pbt" {with-test}
  "odoc" {with-doc}
  "bisect_ppx" { with-test & >= "2.5" }
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
