opam-version: "2.0"
name: "ec-pbt"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "Property based testing for elliptic curves"
description: "Property based testing for elliptic curves"
homepage: "https://gitlab.com/dannywillems/ocaml-ec"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-ec.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-ec/issues"
license: "MIT"
depends: [
  "dune" {>= "2.7"}
  "zarith" {>= "1.9.1" & < "2.0.0"}
  "ff-sig"
  "ec-sig" {= version}
  "alcotest"
  "odoc" {with-doc}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
pin-depends: [
  ["ff-sig.dev" "git+https://gitlab.com/dannywillems/ocaml-ff.git#10fdcc9796a3d620375b98a2fd473a1dd70bb35d"]
]
