opam-version: "2.0"
name: "ocaml-ec"
version: "0.0.3"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "OCaml implementation of basic elliptic curve operations"
description: "OCaml implementation of basic elliptic curve operations"
homepage: "https://gitlab.com/dannywillems/ocaml-ec"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-ec.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-ec/issues"
license: "MIT"
depends: [
  "dune" {>= "2.0"}
  # Has not been tested with other Zarith versions.
  # The CI should verify it and it can then be extent
  "zarith" {= "1.9.1"}
  "ff" {>= "0.3.0" & < "0.4.0"}
  "alcotest" {with-test}
  "odoc" {with-doc}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
pin-depends: [
  ["ff.0.3.0" "git+https://gitlab.com/dannywillems/ocaml-ff.git#0.3.0"]
]
