opam-version: "2.0"
name: "ec"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "OCaml implementation of elliptic curve operations"
description: "OCaml implementation of elliptic curve operations"
homepage: "https://gitlab.com/dannywillems/ocaml-ec"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-ec.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-ec/issues"
license: "MIT"
depends: [
  "dune" {>= "2.7"}
  "zarith" {>= "1.9.1" & < "2.0.0"}
  "ff"
  "ec-sig" {= version}
  "alcotest" {with-test}
  "odoc" {with-doc}
  "bisect_ppx" { with-test & >= "2.5" }
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
