opam-version: "2.0"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "Ed25519 implementation using primitives from ocaml-ec"
description: "Ed25519 implementation using primitives from ocaml-ec"
homepage: "https://gitlab.com/dannywillems/ocaml-ec"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-ec"
bug-reports: "https://gitlab.com/dannywillems/ocaml-ec/issues"
license: "MIT"
depends: [
  "dune" {>= "2.7"}
  "zarith" {>= "1.9.1" & < "2.0.0"}
  "ff"
  "ec-sig" {= version}
  "ec" {= version}
  "ec-curve25519" {= version}
  "hex"
  # Not using the fork providing in the library
  "digestif"
  "alcotest" { with-test }
  "bisect_ppx" { with-test & = "2.5.0" }
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
