opam-version: "2.0"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "MEC library"
homepage: "https://gitlab.com/dannywillems/ocaml-ec"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-ec.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-ec/issues"
license: "MIT"
depends: [
  "dune" {>= "2.7"}
  "zarith" {>= "1.9.1" & < "2.0.0"}
  "eqaf"
  "bigarray-compat"
  "hex"
  "ff-sig"
  "ff"
  "alcotest"
  # For digestif, see
  # https://github.com/mirage/digestif/blob/344f54f55937df66897995bcea417534ece69ca3/digestif.opam#L44.
  # Digestif is forked to add personalisation
  # No version constraint upstream, hence not adding any
  "odoc" {with-doc}
  "bisect_ppx" { with-test & >= "2.5" }
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
