opam-version: "2.0"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "Mec - Mini Elliptic Curve library"
homepage: "https://gitlab.com/dannywillems/ocaml-ec"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-ec.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-ec/issues"
license: "MIT"
depends: [
  "ocaml" {>= "4.12"}
  "dune" {>= "2.7"}
  "zarith" {>= "1.9.1" & < "2.0.0"}
  "eqaf"
  "bigarray-compat"
  "hex"
  "ff-sig" {>= "0.6.0"}
  "ff" {>= "0.6.0"}
  "alcotest"
  # For digestif, see
  # https://github.com/mirage/digestif/blob/344f54f55937df66897995bcea417534ece69ca3/digestif.opam#L44.
  # Digestif is forked to add personalisation
  # No version constraint upstream, therefore not adding any
  "odoc" {with-doc}
  "bisect_ppx" { with-test & >= "2.5" }
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
