(executable
 (name bench_poseidon252)
 (modules bench_poseidon252)
 (libraries mec bls12-381-unix ff core core_bench)
 (ocamlopt_flags
  (:standard -O3)))

(executable
 (name bench_poseidon_orchard)
 (modules bench_poseidon_orchard)
 (libraries mec bls12-381-unix ff core core_bench)
 (ocamlopt_flags
  (:standard -O3)))

(executable
 (name bench_neptunus)
 (modules bench_neptunus)
 (libraries mec bls12-381-unix ff core core_bench)
 (ocamlopt_flags
  (:standard -O3)))
