(copy_files constants/{*.ml})

(executable
 (name bench_poseidon252)
 (modules bench_poseidon252)
 (libraries mec bls12-381-unix core core_bench)
 (ocamlopt_flags
  (:standard -O3)))

(executable
 (name bench_hades_optimised)
 (modules bench_hades_optimised ark_poseidon128 mds_poseidon128)
 (libraries mec ff core core_bench bls12-381)
 (ocamlopt_flags
  (:standard -O3)))

(executable
 (name bench_poseidon_orchard)
 (modules bench_poseidon_orchard)
 (libraries mec ff core core_bench)
 (ocamlopt_flags
  (:standard -O3)))

(executable
 (name bench_neptunus)
 (modules bench_neptunus)
 (libraries mec ff core core_bench)
 (ocamlopt_flags
  (:standard -O3)))
