; Digestif fork

; (copy_files curve/{*.ml*})

; (copy_files digestif/{*.ml*})

; (copy_files hash/{*.ml*})

; (copy_files hash/poseidon/{*.ml*})

; (copy_files signature/{*.ml*})

; (copy_files signature/group_hash/{*.ml*})

; (copy_files signature/redjubjub/{*.ml*})

(library
 (name mec)
 (instrumentation
  (backend bisect_ppx))
 (public_name mec)
 (flags
  (:standard -w -49))
 (libraries mec.curve mec.utils))
