(copy_files res/test_vector_pedersen_hash.ml)

(test
 (name test_secp256k1)
 (modules test_secp256k1)
 (libraries ec-secp256k1 alcotest ec-pbt)
 (package ec-secp256k1)
)

(test
 (name test_secp256r1)
 (modules test_secp256r1)
 (libraries ec-secp256r1 alcotest ec-pbt)
 (package ec-secp256r1)
)

(test
 (name test_ec_functor)
 (modules test_ec_functor)
 (libraries ec ff alcotest)
 (package ec)
)

(tests
 (names test_babyjubjub)
 (modules test_babyjubjub)
 (libraries ec-babyjubjub alcotest ec-pbt)
 (package ec-babyjubjub)
)

(tests
 (names test_babyjubjub_reduced)
 (modules test_babyjubjub_reduced)
 (libraries ec-babyjubjub-reduced alcotest ec-pbt)
 (package ec-babyjubjub-reduced)
)

(tests
 (names test_jubjub)
 (modules test_jubjub)
 (libraries ec-jubjub alcotest ec-pbt)
 (package ec-jubjub)
)

(tests
 (names test_pedersen_hash test_iterator)
 (libraries ec-jubjub pedersen-hash alcotest hex)
 (modules test_pedersen_hash test_iterator test_vector_pedersen_hash)
 (package pedersen-hash)
)

(tests
 (names test_digestif)
 (libraries digestif_fork alcotest hex)
 (modules test_digestif)
)

(tests
 (names test_find_group_hash)
 (libraries ec-jubjub group_hash alcotest)
 (modules test_find_group_hash)
 (package reddsa)
)

(tests
 (names test_redjubjub)
 (libraries ec-jubjub redjubjub alcotest)
 (modules test_redjubjub)
 (package redjubjub)
)

(tests
 (names test_curve25519)
 (modules test_curve25519)
 (libraries ec-curve25519 alcotest ec-pbt)
 (package ec-curve25519)
)

(tests
 (names test_ed25519)
 (modules test_ed25519)
 (libraries ec-curve25519 ed25519 alcotest)
 (package ed25519)
)
