(copy_files res/test_vector_pedersen_hash.ml)

(tests
 (names test_babyjubjub test_babyjubjub_reduced test_bn254 test_curve25519
   test_curve448 test_digestif test_ec_functor test_find_group_hash
   test_iterator test_jubjub test_pallas test_pedersen_hash test_poseidon128
   test_poseidon252 test_redjubjub test_secp256k1 test_secp256r1
   test_tweedledee test_tweedledum test_vesta)
 (libraries mec)
 (package mec))
