; Digestif fork
(copy_files ../digestif/{*.ml*})

(library
 (name group_hash)
 (modules
   group_hash
   ; Digestif fork, copied from the directory digestif
   digestif
   digestif_conv
   digestif_eq
   xor
   digestif_bi
   digestif_by
   baijiu_blake2s
   baijiu_blake2b
 )
 (private_modules
   ; Digestif fork, copied from the directory digestif
   digestif
   digestif_conv
   digestif_eq
   xor
   digestif_bi
   digestif_by
   baijiu_blake2s
   baijiu_blake2b
 )
 (libraries
   ec-jubjub
   ; For digestif, see https://github.com/mirage/digestif/blob/344f54f55937df66897995bcea417534ece69ca3/digestif.opam#L44
   eqaf
   bigarray-compat
   hex
 )
 (instrumentation (backend bisect_ppx))
)

