; Digestif fork
(copy_files ../digestif/{*.ml*})

(library
 (name redjubjub)
 (public_name redjubjub)
 (modules redjubjub
          ; Digestif fork, copied from the directory digestif
          digestif
          digestif_conv
          digestif_eq
          xor
          digestif_bi
          digestif_by
          baijiu_blake2s
          baijiu_blake2b
 )
 (private_modules
   ; Digestif fork, copied from the directory digestif
   digestif
   digestif_conv
   digestif_eq
   xor
   digestif_bi
   digestif_by
   baijiu_blake2s
   baijiu_blake2b
 )
 (libraries reddsa ec-jubjub hex)
)
