(tests
 (names test_babyjubjub test_babyjubjub_reduced
   test_bandersnatch_affine_montgomery test_bandersnatch_affine_weierstrass
   test_bandersnatch_affine_edwards test_bls12_381_affine
   test_bls12_381_projective test_bn254_affine test_bn254_jacobian
   test_bn254_projective test_curve25519_affine_edwards
   test_curve25519_conversions_between_forms test_curve25519_montgomery
   test_curve448 test_ec_functor test_iso_pallas_affine test_jubjub
   test_jubjub_conversions_between_forms test_jubjub_weierstrass
   test_pallas_affine test_pallas_jacobian test_pallas_projective
   test_secp256k1_affine test_secp256k1_jacobian test_secp256k1_projective
   test_secp256r1_affine test_secp256r1_jacobian test_secp256r1_projective
   test_tweedledee_affine test_tweedledee_jacobian test_tweedledee_projective
   test_tweedledum_affine test_tweedledum_jacobian test_tweedledum_projective
   test_vesta_affine test_vesta_jacobian test_vesta_projective)
 (libraries mec ff)
 (package mec))
