(executable
 (name security_parameters)
 (modules security_parameters)
 (libraries zarith core)
 (preprocess
  (pps ppx_jane)))

(executable
 (name generate_ark)
 (modules generate_ark)
 (libraries zarith core ff digestif hex)
 (preprocess
  (pps ppx_jane)))

(executable
 (name generate_mds)
 (modules generate_mds)
 (libraries zarith core ff digestif hex)
 (preprocess
  (pps ppx_jane)))

(executable
 (name linear_trick_optimisation)
 (modules linear_trick_optimisation)
 (libraries zarith core ff ff-sig digestif hex mec)
 (preprocess
  (pps ppx_jane)))
